packages/typ/tests/fixtures/diagnostics/0836_polyvar_coercion_payload_mismatch_08.ml
let bad_theta (x : [ `A of int ]) : [ `A of bool ] =
  (x :> [ `A of bool ])
